--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
             <div id="div-descricao-ebook" class="col-lg-5 align-self-center">
               <p id="ebook-gratuito">E-book gratuito</p>
               <h3 id="titulo-ebook-principal">Purpurina, corote & Economia</h3>
-              <p id="descricao-ebook-principal">Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. 
-                Per aumento de cachacis, eu reclamis. Quem num gosta di mim que vai caçá sua turmis!
+              <p id="descricao-ebook-principal">Tá afim de curtir o Carnaval mas a grana tá curta? Então você veio ao lugar certo! A gente produziu um e-book exclusivo com todas as dicas que você precisa para aproveitar muuuuito o Carnaval de BH gastando o mínimo possível!
               </p>
               <a href="pages/ebook.html" id="baixar-ebook-principal">baixar e-book gratuito</a>
               <!--<button  type="button" class="btn btn-primary"></button>-->
@@ -78,7 +77,7 @@
       <div id="sessao-blog" class="container">
         <div class="row">
           <span><img src="assets/blog-ico.png" id="ico-blog" alt="blog"></span>
-          <h3 id="titulo-blog">Blog</h3>
+          <h3 id="titulo-blog">Destaques</h3>
         </div>
 
         <div class="row linha-postagem">
