--- a/pages/ebook.html
+++ b/pages/ebook.html
@@ -17,34 +17,18 @@
     <!-- Cabeçalho -->
     <header>
       <nav id="cabecalho">
-        <div class="row">
-          <div class="col-2"></div>
-          <div class="col-2">
-            <span>
-              <a href="../index.html"
-                ><img
-                  src="../assets/logo-colorido.png"
-                  id="logo-cabecalho"
-                  alt="logotipo"
-              /></a>
-            </span>
-          </div>
-          <div class="col-2"></div>
-          <div class="col-4"></div>
-          <div class="col-4"></div>
-        </div>
+        <span>
+          <a href="../index.html"
+            ><img
+              src="../assets/logo-colorido.png"
+              id="logo-cabecalho"
+              alt="logotipo"
+          /></a>
+        </span>
         <ul id="menu">
-          <!--<li><a href="../index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="ebook.html">E-book</a></li>
-          <li>
-            <input
-              type="text"
-              name="pesquisa"
-              id="pesquisa"
-              placeholder="Busca"
-            />
-          </li> -->
         </ul>
       </nav>
     </header>
