--- a/pages/post1.html
+++ b/pages/post1.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="author" content="NoControle" />
     <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="stylesheet" href="../styles/index.css" />
     <link rel="stylesheet" href="../styles/post.css" />
-    <link rel="stylesheet" href="../styles/sobre.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -30,14 +30,6 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="ebook.html">E-book</a></li>
-          <!--<li>
-            <input
-              type="text"
-              name="pesquisa"
-              id="pesquisa"
-              placeholder="Busca"
-            />
-          </li>-->
         </ul>
       </nav>
     </header>
@@ -72,7 +64,41 @@
                 <div class="col-lg-6">
                   <div id="sobre-txt">
                     <p>Se você veio parar aqui, muito provavelmente está pensando em encerrar sua conta em um banco tradicional e abrir uma conta em um banco digital, ou então acabou de migrar para um banco digital, mas ainda não sabe se fez a coisa certa. Acertei?</p>
-                    <img src="../assets/">
+                    <img src="../assets/post1.png" title="Foto: Bruce Mars / Pexels" style="width: 100%; height: auto;">
+                    <br><br><hr>
+                    <h5>Mas afinal, o que é uma conta digital?</h5>
+                    <br>
+                    <p>Uma conta digital é muito parecida com uma conta tradicional. Só que tudo que acontece dentro de uma agência bancária, foi parar em um aplicativo de celular. Você acompanha sua fatura, faz transferências, paga e gera boletos pelo celular ou pelo computador, sem precisar sair de casa ou enfrentar filas. Até o atendimento é feito eletronicamente!</p>
+                    <br><hr>
+                    <h5>Pontos negativos (mas nem tanto) de ter uma conta digital:</h5>
+                    <br>
+                    <p>Os bancos digitais não tem agência. Eu considero isto um ponto positivo, mas algumas pessoas sentem falta do contato direto com o seu gerente.Em caso de dúvida ou problema você deve entrar em contato com seu banco digital pelo chat no app ou no site, ou por telefone - e dependendo do problema, estas conversas poderão ser muito longas.</p>
+                    <p>Você também dependerá da disponibilidade de caixas 24h em sua cidade ou precisará ir em casas lotéricas em horário comercial se quiser sacar seu dinheiro. As taxas de saque também costumam ser altas.</p>
+                    <br><hr>
+                    <h5>Então, o que tem de bom nesse tal de banco digital?</h5>
+                    <br>
+                    <p>Os bancos digitais não têm que gastar com a manutenção de uma rede de agências, segurança, aluguel, dentre outras coisas. Com isso, eles conseguem repassar essa economia para seus clientes, trabalhando com tarifas baixíssimas ou sem tarifas.</p>
+                    <p>Lembra quando você abriu sua primeira conta no banco? O tempo que teve que aguardar na fila, aquela papelada que precisou ler e assinar, fora as vezes que precisou voltar na agência? Você não perde mais esse tempo ao abrir uma conta digital! Tudo é feito pelo aplicativo no celular, por lá você envia fotos dos seus documentos, uma foto sua para comprovar que é você e aceita os termos do banco por ali mesmo, sem pegar trânsito nem nada. Só precisa se preocupar em sair bonito na selfie!</p>
+                    <p>Pagar um boleto, transferir dinheiro para o seu filho que está viajando, checar a fatura do cartão, fazer um depósito e até pegar um empréstimo. Você consegue fazer tudo isso sem sair do sofá. E se não for horário comercial ou dia útil, você pode agendar uma transferência para o próximo dia útil.</p>
+                    <p>Muitos bancos digitais têm seus programas de pontos e de cashback, fazendo seu dinheiro crescer ainda mais. Você também consegue ajustar o limite do cartão pelo aplicativo. Além disso, com a fatura na palma da mão você consegue organizar muito melhor os seus gastos.</p>
+                    <p>É legal lembrar que transferindo dinheiro de uma conta de um banco digital para outra do mesmo banco, você não paga nenhuma taxa e o dinheiro cai na mesma hora, mesmo não sendo dia útil, nem horário comercial.</p>
+                    <br><hr>
+                    <h5>Mas é seguro?</h5>
+                    <br>
+                    <p>O Conselho Monetário Nacional obriga, na resolução 4658 estas instituições financeiras a terem uma política de segurança cibernética, definindo requisitos para a contratação de serviços de processamento e armazenamento de dados e de computação em nuvem.</p>
+                    <p>Além disso, a segurança de uma conta digital é basicamente a mesma das contas tradicionais. Ambas seguem a regulamentação do Banco central. Para se proteger de ataques cibernéticos, as empresas estão investindo em sistemas cada vez mais seguros.</p>
+                    <p>Então, pode ficar tranquilo, mas lembre-se sempre de proteger seus dados bancários, como faria com os dados da sua conta convencional.</p>
+                    <br><hr>
+                    <h5>Acho que isso é tecnológico demais pra mim…</h5>
+                    <br>
+                    <p>Se você não está acostumado a lidar com aplicativos, realmente pode ter um pouco de dificuldade em seus primeiros contatos com um banco digital. Mas não é nenhum bicho de sete cabeças! Os bancos digitais focam muito em experiência do cliente e em usabilidade, suas interfaces são muito intuitivas.</p>
+                    <p>Mas se mesmo assim achou difícil, peça alguém para te ajudar nesse começo, na hora de abrir a conta e te mostrar um pouco das funcionalidades. Garanto que rapidinho você estará contando para todo mundo que não entendo como ainda não tinha tomado a decisão de abrir uma conta digital antes!</p>
+                    <br><hr>
+                    <h5>Como saber qual é a melhor conta digital para mim?</h5>
+                    <br>
+                    <p>Cada banco digital tem suas particularidades, e você deve entender qual é o mais adequado para o seu perfil.</p>
+                    <p>Para decidir o meu, usei o Simulador de Contas Digitais e deu super certo. O banco digital que ele me indicou está atendendo todas as minhas necessidades. </p>
+                    <p>Para saber qual é o seu, acesse <a href="https://bit.ly/3awaS1U">https://bit.ly/3awaS1U</a>, informe seus dados e quais serviços você procura. </p>
                   </div>
                 </div>
                 <div class="col-3">
@@ -85,21 +111,121 @@
           </div>
         </div>
       </div>
+
+      <!-- Posts do blog -->
+      <div id="sessao-blog" class="container">
+        <div class="row">
+          <span><img src="../assets/blog-ico.png" id="ico-blog" alt="blog"></span>
+          <h3 id="titulo-blog">Destaques</h3>
+        </div>
+
+        <div class="row linha-postagem">
+          <div class="col-lg-4">
+            <div class="atalho-post">
+              <img src="../assets/ebook2.png" class="thumb-blog" alt="thumb">
+              <div class="descricao-atalho-post">
+                <h5 class="titulo-atalho-blog">
+                  Carnavel, Purpurina e Corote! E-book gratuito
+                </h5>
+                <p id="subtitulo-atalho">Educação Financeira • 15/01/2020</p>
+                <a href="../pages/ebook.html">
+                  <button id="ler-mais" type="button" class="btn btn-primary align-self-end">LER MAIS</button>
+                </a>
+              </div>             
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="atalho-post">
+              <img src="../assets/post2.jpg" class="thumb-blog" alt="thumb">
+              <div class="descricao-atalho-post">
+                <h5 class="titulo-atalho-blog">
+                  10 dicas de fantasias estilo “faça você mesmo” para o Carnaval!
+                </h5>
+                <p id="subtitulo-atalho">Educação Financeira • 15/01/2020</p>
+                <a href="../pages/post2.html">
+                  <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
+                </a>
+              </div>              
+            </div class="atalho-post">
+          </div>
+          <div class="col-lg-4">
+            <div class="atalho-post">
+              <img src="../assets/post3.jpg" class="thumb-blog" alt="thumb">
+              <div class="descricao-atalho-post">
+                <h5 class="titulo-atalho-blog">
+                  7 Dicas para economizar no Carnaval de rua em Belo Horizonte
+                </h5>
+                <p id="subtitulo-atalho">Educação Financeira • 15/01/2020</p>
+                <a href="../pages/post3.html">
+                  <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
+                </a>
+              </div>              
+            </div class="atalho-post">
+          </div>
+        </div>
+
+        <div class="row linha-postagem ">
+          <div class="col-lg-4">
+            <div class="atalho-post">
+              <img src="../assets/post4.jpg" class="thumb-blog" alt="thumb">
+              <div class="descricao-atalho-post">
+                <h5 class="titulo-atalho-blog">
+                  Empreendedorismo Digital
+                </h5>
+                <p id="subtitulo-atalho">Educação Financeira • 15/01/2020</p>
+                <a href="../pages/post4.html">
+                  <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
+                </a>
+              </div>              
+            </div class="atalho-post">
+          </div>
+          <div class="col-lg-4">
+            <div class="atalho-post">
+              <img src="../assets/post5.png" class="thumb-blog" alt="thumb">
+              <div class="descricao-atalho-post">
+                <h5 class="titulo-atalho-blog">
+                  Pule carnaval ganhando dinheiro
+                </h5>
+                <p id="subtitulo-atalho">Educação Financeira • 15/01/2020</p>
+                <a href="../pages/post5.html">
+                  <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
+                </a>
+              </div>              
+            </div class="atalho-post">
+          </div>
+          <div class="col-lg-4">
+            <div class="atalho-post">
+              <img src="../assets/post6.jpg" class="thumb-blog" alt="thumb">
+              <div class="descricao-atalho-post">
+                <h5 class="titulo-atalho-blog">
+                  Como ganhar dinheiro vendendo suas roupas em brechós virtuais 
+                </h5>
+                <p id="subtitulo-atalho">Educação Financeira • 15/01/2020</p>
+                <a href="../pages/post6.html">
+                  <button id="ler-mais" type="button" class="btn btn-primary">LER MAIS</button>
+                </a>
+              </div>              
+            </div class="atalho-post">
+          </div>
+        </div>
+      </div>
+      <!-- Fim da sessao dos posts do blog -->
+      </div>
       <!-- Fim da área do post -->
     </div>
 
     <footer>
       <div id="rodape">
         <div id="linha-rodape" class="row align-items-center">
-          <div class="col-lg-2"></div>
+          <div class="col-lg-1"></div>
           <div class="col-lg-3">
             <img
               src="../assets/logo-branco.png"
               id="logo-cabecalho"
               alt="logotipo"
-            />
+            />             
           </div>
-          <div class="col-lg-6 align-self-center">
+          <div class="col-lg-7 align-self-center"> 
             <p id="direitos">
               <b>NoControle.blog.</b> Todos os direitos reservados.
             </p>
