--- a/pages/ebook.html
+++ b/pages/ebook.html
@@ -91,27 +91,22 @@
     </div>
 
     <footer>
-      <div id="rodape-ebook">
+      <div id="rodape">
         <div id="linha-rodape" class="row align-items-center">
-          <div class="col-2"></div>
-          <div class="col-2">
+          <div class="col-lg-1"></div>
+          <div class="col-lg-3">
             <img
               src="../assets/logo-branco.png"
               id="logo-cabecalho"
               alt="logotipo"
-            />
+            />             
           </div>
-          <div class="col-2"></div>
-          <div class="col-4 align-self-center">
+          <div class="col-lg-7 align-self-center"> 
             <p id="direitos">
               <b>NoControle.blog.</b> Todos os direitos reservados.
             </p>
           </div>
-          <div class="col-2">
-            <div id="share">
-              <a></a>
-            </div>
-          </div>
+          <div class="col-lg-1"></div>
         </div>
       </div>
     </footer>
