--- a/pages/post3.html
+++ b/pages/post3.html
@@ -144,7 +144,7 @@
               <img src="../assets/ebook2.png" class="thumb-blog" alt="thumb">
               <div class="descricao-atalho-post">
                 <h5 class="titulo-atalho-blog">
-                  Carnavel, Purpurina e Corote! E-book gratuito
+                  Carnaval, Purpurina e Corote! E-book gratuito
                 </h5>
                 <p id="subtitulo-atalho">Educação Financeira • 15/01/2020</p>
                 <a href="../pages/ebook.html">
