--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -13,6 +13,24 @@
       crossorigin="anonymous"
     />
     <title>No Controle</title>
+    <!-- Icones Favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <!-- Cabeçalho -->
@@ -42,11 +60,11 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-1"></div>
-            <div class="col-lg-6 align-self-end">
+            <div class="col-lg-8 align-self-end">
               <h2><b>
                 Quem Somos</b></h2>
               <h5 id="subtitulo-banner"></h5>
-              <div class="col-lg-3"></div>
+              <div class="col-lg-1"></div>
             </div>
           </div>
         </div>
@@ -61,7 +79,7 @@
             <div class="col-lg-10">
               <div class="row">
                 <div class="col-lg-3"></div>
-                <div class="col-lg-6">
+                <div class="col-lg-8">
                   <div id="sobre-txt">
                     <img src="../assets/nos.jfif" style="height: auto; width: 100%;" title="Quem Somos">
                     <br><br>
@@ -71,9 +89,6 @@
                     <p>Estamos em constante aprendizado, portanto fiquem a vontade para opinar e sugerir novos conteúdos e abordagens!</p>
                   </div>
                 </div>
-                <div class="col-3">
-                </div>
-
                 <div class="col-lg-3"></div>
               </div>
             </div>
