--- a/pages/post2.html
+++ b/pages/post2.html
@@ -89,10 +89,10 @@
                     <br>
                     <div class="row">
                       <div class="col">
-                        <img src="../assets/post2_imagem1.jpeg" style="height: auto; width: 100%;" title="Modelo 1">
+                        <img class="img-b" src="../assets/post2_imagem1.jpeg" style="height: auto; width: 100%;" title="Modelo 1">
                       </div>
                       <div class="col">
-                        <img src="../assets/post2_imagem2.jpeg" style="height: auto; width: 100%;" title="Modelo 2">
+                        <img class="img-b" src="../assets/post2_imagem2.jpeg" style="height: auto; width: 100%;" title="Modelo 2">
                       </div>
                     </div>
                     <br><hr>
