--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -57,14 +57,15 @@
      <div id="main">
       <!-- Banner do site-->
       <div id="banner">
-        <div class="container">
+        <div class="container"></div>
           <div class="row">
-            <div class="col-lg-1"></div>
-            <div class="col-lg-8 align-self-end">
-              <h2><b>
+            <div class="col-lg-10">
+              <div class="row">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-8 align-self-end">
+              <h2 style="padding-left: 14px;"><b>
                 Quem Somos</b></h2>
-              <h5 id="subtitulo-banner"></h5>
-              <div class="col-lg-1"></div>
+              </div>
             </div>
           </div>
         </div>
@@ -75,7 +76,6 @@
       <div id="corpo-post">
         <div id="container">
           <div id="row">
-            <div class="col-lg-1"></div>
             <div class="col-lg-10">
               <div class="row">
                 <div class="col-lg-3"></div>
@@ -92,7 +92,6 @@
                 <div class="col-lg-3"></div>
               </div>
             </div>
-            <div class="col-lg-1"></div>
           </div>
         </div>
       </div>
