--- a/pages/post5.html
+++ b/pages/post5.html
@@ -57,14 +57,15 @@
      <div id="main">
       <!-- Banner do site-->
       <div id="banner">
-        <div class="container">
+        <div class="container"></div>
           <div class="row">
-            <div class="col-lg-1"></div>
-            <div class="col-lg-8 align-self-end">
-              <h2><b>
+            <div class="col-lg-10">
+              <div class="row">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-8 align-self-end">
+              <h2 style="padding-left: 14px;"><b>
                 Pule carnaval ganhando dinheiro</b></h2>
-              <h5 id="subtitulo-banner"></h5>
-              <div class="col-lg-1"></div>
+              </div>
             </div>
           </div>
         </div>
