--- a/pages/ebook.html
+++ b/pages/ebook.html
@@ -31,7 +31,7 @@
     <meta name="msapplication-TileImage" content="../favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
   </head>
-  <body>
+  <body style="background: #1B48D1;">
     <!-- Cabeçalho -->
     <header>
       <nav id="cabecalho">
