--- a/pages/thanks.html
+++ b/pages/thanks.html
@@ -68,37 +68,33 @@
                   />
                 </div>
                 <div class="col-lg-6">
-                  <form
-                    method="POST"
-                    action="https://smtl.gama.academy/leads/f5d1eb00-39f4-11ea-96ea-713ae26a8736"
-                    onSubmit="javascript:download_pdf()"
-                  >
                   <div id="form-box">
                     <span>E-BOOK</span>
                     <h3>Purpurina, Corote & Economia!</h3>
-                    <span>Tá afim de curtir o Carnaval mas a grana tá curta? Então você veio ao lugar certo! A gente produziu um e-book exclusivo com todas as dicas que você precisa para aproveitar muuuuito o Carnaval de BH gastando o mínimo possível! Preencha com seus dados e baixe agora! Aproveite e compartilhe com os amigos!</span>
-                    <input
-                      name="name"
-                      type="text"
-                      pattern="^\D{2,}\s[\D\s]{2,}$"
-                      title="Nome Completo"
-                      placeholder="Nome Completo"
-                      required
-                    />
-                    <input
-                      name="email"
-                      type="email"
-                      title="E-mail"
-                      placeholder="E-mail"
-                      required
-                    />
-                    <input name="redirectTo" type="hidden" value="http://nocontrole.blog.br/pages/thanks.html" />
-                    <!--<input name="debugMode" type="hidden" value="true" />-->
-                    <div id="sub">
-                      <input type="submit" value="BAIXAR O MATERIAL"/>
-                    </div>
+                    <span>Obrigado por baixar o nosso material! Se curtir, fique à vontade para compartilhar com os amigos! ;)</span>
+                    <div class=row>
+                    <a href="https://www.instagram.com/nocontrole.blog/">
+                      <div title="Nos Siga no Instagram" class="a-midia">
+                        <img src="../assets/Vector-3.png">
+                      </div>
+                    </a>
+                    <a href="https://twitter.com/home?status=http://nocontrole.blog.br/pages/ebook.html Tá afim de curtir o Carnaval mas a grana tá curta? Então você veio ao lugar certo! A gente produziu um e-book exclusivo com todas as dicas que você precisa para aproveitar muuuuito o Carnaval de BH gastando o mínimo possível! Preencha com seus dados e baixe agora! Aproveite e compartilhe com os amigos!">
+                      <div title="Compartilhar no Twitter" class="a-midia">
+                        <img src="../assets/Vector-1.png">
+                      </div>
+                    </a>
+                    <a href="https://www.linkedin.com/shareArticle?mini=true&url=http://nocontrole.blog.br/pages/ebook.html&title=&summary=Tá afim de curtir o Carnaval mas a grana tá curta? Então você veio ao lugar certo! A gente produziu um e-book exclusivo com todas as dicas que você precisa para aproveitar muuuuito o Carnaval de BH gastando o mínimo possível! Preencha com seus dados e baixe agora! Aproveite e compartilhe com os amigos!&source=">
+                      <div title="Compartilhar no LinkedIn" class="a-midia">
+                        <img src="../assets/Vector-2.png">
+                      </div>
+                    </a>
+                    <a href="https://www.facebook.com/sharer/sharer.php?u=http://nocontrole.blog.br/pages/ebook.html" target="_blank">
+                      <div title="Compartilhar no Facebook" class="a-midia">
+                        <img src="../assets/Vector-4.png">
+                      </div>
+                    </a>
                   </div>
-                  </form>
+                  </div>
                 </div>
               </div>
             </div>
