--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -81,7 +81,7 @@
                 <div class="col-lg-3"></div>
                 <div class="col-lg-8">
                   <div id="sobre-txt">
-                    <img src="../assets/nos.jfif" style="height: auto; width: 100%;" title="Quem Somos">
+                    <img src="../assets/nos.png" style="height: auto; width: 100%;" title="Quem Somos">
                     <br><br>
                     <p>O No Controle nasceu em uma mesa de bar, quando conversávamos sobre a vida e percebemos uma coisa: Somos publicitários, administradores, desenvolvedores, fotógrafos, designers, engenheiros - mas todos com uma questão em comum, qual a melhor forma de administrar nosso tão suado dinheiro?</p>
                     <p>Desde então, começamos a estudar muito sobre o assunto e trocar conhecimentos sobre finanças, economia e investimento. E agora temos um propósito: te ensinar de forma simples, prática e sem muita burocracia a fazer o seu dinheiro chegar ao final do mês, e até render!</p>
