--- a/pages/ebook.html
+++ b/pages/ebook.html
@@ -45,7 +45,7 @@
         </span>
         <ul id="menu">
           <li><a href="../index.html">Home</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="sobre.html">Quem Somos</a></li>
           <li><a href="ebook.html">E-book</a></li>
         </ul>
       </nav>
