--- a/pages/post3.html
+++ b/pages/post3.html
@@ -46,7 +46,7 @@
         </span>
         <ul id="menu">
           <li><a href="../index.html">Home</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="sobre.html">Quem Somos</a></li>
           <li><a href="ebook.html">E-book</a></li>
         </ul>
       </nav>
