--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -46,7 +46,7 @@
         </span>
         <ul id="menu">
           <li><a href="../index.html">Home</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="sobre.html">Quem Somos</a></li>
           <li><a href="ebook.html">E-book</a></li>
         </ul>
       </nav>
@@ -81,7 +81,9 @@
                 <div class="col-lg-3"></div>
                 <div class="col-lg-8">
                   <div id="sobre-txt">
-                    <img src="../assets/nos.png" style="height: auto; width: 100%;" title="Quem Somos">
+                    <div style="width: 100%; height: auto; text-align: center;">
+                      <img id="nos" src="../assets/nos.png" title="Quem Somos">
+                    </div>
                     <br><br>
                     <p>O No Controle nasceu em uma mesa de bar, quando conversávamos sobre a vida e percebemos uma coisa: Somos publicitários, administradores, desenvolvedores, fotógrafos, designers, engenheiros - mas todos com uma questão em comum, qual a melhor forma de administrar nosso tão suado dinheiro?</p>
                     <p>Desde então, começamos a estudar muito sobre o assunto e trocar conhecimentos sobre finanças, economia e investimento. E agora temos um propósito: te ensinar de forma simples, prática e sem muita burocracia a fazer o seu dinheiro chegar ao final do mês, e até render!</p>
